1.dec (ws)
      - save StaffGroup type in xml for StaffType
      - add method clone() to StaffType()
      - make StaffType() a virtual base class (so it cannot be created)
30.nov (ws)
      - add "styled" button to text toolbar (gives a hint why most widgets are inactive)
29.nov (ws)
      - split StaffType() into StaffTypePitched() StaffTypeTablature() and
        StaffTypePercussion()
      (lv)
      - fix MusicXML import of bracket and octave-shift
28.nov (lv)
      - fix MusicXML import of pedal and trill lines
       (mi)
      - first implementation. of configurable tablatures
25.nov (lv)
      - fix MusicXML import of pedal syms and hairpins
24.nov (la)
      - fix #8018: Lilypond: Quote marks in lyrics need to be escaped
       (ws)
      - fix #7892: Exchange voices adds extra rests
22.nov (ws)
      - fix update of note accidentals after inserting/deleting key signature
      - fixes for exchangeVoice()
      - fix: missing bbox calculation for hook on stem down chord
      - enable playback cursor again after seek in play mode
      - fix #7944: missing instrument initialization; instruments limit?
      - better single note tremolo layout (beamed chords)
      - added patch from Miwarre to extend frame properties
21.nov (db)
      - fix #8005: Dots too close on right side of "end-start repeat" barline
      - normal five-line staff for Temple blocks
      - copy edits to Page Settings dialog
19.nov (ws)
      - fix #7835: converter mode crash
      - fixes from Miwarre:
            #7983: any edit to text style set sizeIsSpatiumDependent true
            #7986: text styles backward compatibility issue
            #7709: Clutter after end-start repeat sign
            #7017: Chord names does not support "H" name as chord
16.nov (ws)
      - fix crash when trying to enter lyrics on voice 2
14.nov (ws)
      - add tempo text template to text palette
      - fix: tie disappeared when first note was beamed