@@ -103,6 +103,7 @@ enum ElementType {
       NOTEHEAD, NOTEDOT, TREMOLO,
       MEASURE, STAFF_LINES,
       CURSOR, SELECTION, LASSO, SHADOW_NOTE, RUBBERBAND,
+      TAB_DURATION_SYMBOL,
 
       PAGE,
 
